--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,5 +80,4 @@ jobs:
             npx vsce publish --packagePath $vsix -t $target
           done
         env:
-          VSCE_PAT: ${{ secrets.VSCE_PAT_PPE }}
-          VSCE_MARKETPLACE_URL: https://marketplace.vsallin.net/
+          VSCE_PAT: ${{ secrets.VSCE_PAT }}
