--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,10 @@ jobs:
           npm_config_arch: ${{ matrix.npm_config_arch }}
       - shell: pwsh
         run: |
-          echo "target=${{ matrix.platform }}-${{ matrix.arch }}" >> $env:GITHUB_ENV
+          case "${{ matrix.arch }}" in
+            web) echo "target=web" >> $env:GITHUB_ENV ;;
+            *) echo "target=${{ matrix.platform }}-${{ matrix.arch }}" >> $env:GITHUB_ENV ;;
+          esac
           echo "version=$((Get-Content .\package.json | ConvertFrom-Json).version)" >> $env:GITHUB_ENV
       - run: npx vsce package -o vscode-platform-specific-sample-${{ env.target }}-${{ env.version }}.vsix --target ${{ env.target }}
       - uses: actions/upload-artifact@v2
