--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,10 +47,10 @@ jobs:
             platform: darwin
             arch: arm64
             npm_config_arch: arm64
-          # - os: ubuntu-latest
-          #   platform: linux
-          #   arch: web
-          #   npm_config_arch: x64
+          - os: ubuntu-latest
+            platform: linux
+            arch: web
+            npm_config_arch: x64
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
