--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
       - run: npx vsce@v1.98.0-alpha.0 package --target ${{ env.target }}
       - uses: actions/upload-artifact@v2
         with:
-          name: vscode-platform-specific-sample-${{ env.target }}
+          name: ${{ env.target }}
           path: "*.vsix"
 
   publish:
