--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"lint": "eslint ."
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.58.0"
+		"@types/vscode": "^1.58.0",
+		"vsce": "^2.14.0"
 	},
 	"dependencies": {
 		"vscode-ripgrep": "^1.12.0"
