--- a/package.json
+++ b/package.json
@@ -26,14 +26,11 @@
 			}
 		]
 	},
-	"scripts": {
-		"lint": "eslint ."
-	},
 	"devDependencies": {
-		"@types/vscode": "^1.58.0",
-		"vsce": "^2.14.0"
+		"@types/vscode": "~1.61.0",
+		"@vscode/vsce": "^3.4.2"
 	},
 	"dependencies": {
-		"@vscode/ripgrep": "^1.14.2"
+		"@vscode/ripgrep": "^1.15.11"
 	}
 }
